# GetLockScreenImages

./: CMakeLists.txt  Readme.md  build.bat  generate.bat
libs/: CMakeLists.txt
libs/TinyEXIF-master/: CMakeLists.txt  EXIFStreamFile.h
libs/jpegsize/: CMakeLists.txt  jpegsize.cpp  jpegsize.h
libs/tinyxml2-master/: CMakeLists.txt
src/: CMakeLists.txt  GetLockScreenImages.cpp  ImageMetadata.cpp  ImageMetadata.h  LockscreenHandler.cpp  LockscreenHandler.h  LockscreenLocator.cpp  LockscreenLocator.h
